--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,47 +2,6 @@
 layout: default
 ---
 
-<!-- Schema.org structured data for articles -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Article",
-  "headline": {{ page.title | jsonify }},
-  "description": {{ page.excerpt | default: site.description | strip_html | strip_newlines | truncate: 160 | jsonify }},
-  "image": {
-    "@type": "ImageObject",
-    "url": "{{ site.url }}{{ page.image | default: '/assets/images/default-post-image.jpg' }}",
-    "width": 1200,
-    "height": 630
-  },
-  "author": {
-    "@type": "Person",
-    "name": {{ site.author | jsonify }},
-    "url": "{{ site.url }}/about/"
-  },
-  "publisher": {
-    "@type": "Organization",
-    "name": {{ site.title | jsonify }},
-    "logo": {
-      "@type": "ImageObject",
-      "url": "{{ site.url }}/assets/images/logo.png",
-      "width": 200,
-      "height": 60
-    }
-  },
-  "datePublished": {{ page.date | date_to_xmlschema | jsonify }},
-  "dateModified": {{ page.last_modified_at | default: page.date | date_to_xmlschema | jsonify }},
-  "mainEntityOfPage": {
-    "@type": "WebPage",
-    "@id": "{{ site.url }}{{ page.url }}"
-  },
-  "articleSection": {{ page.categories | first | default: "Blog" | jsonify }},
-  "keywords": {{ page.tags | join: ", " | jsonify }},
-  "wordCount": {{ page.content | number_of_words }},
-  "timeRequired": "PT{{ page.content | number_of_words | divided_by: 200 | ceil }}M"
-}
-</script>
-
 <article class="post-article">
     <header class="post-header">
         <div class="post-meta">
@@ -85,81 +44,6 @@ layout: default
         </div>
         {% endif %}
     </header>
-
-    {% if page.series %}
-    <!-- 文章系列导航 -->
-    <div class="series-navigation">
-        <div class="series-header">
-            <h3>
-                <i class="fas fa-list-ol"></i>
-                系列文章：{{ page.series }}
-            </h3>
-        </div>
-        
-        <div class="series-posts">
-            {% assign series_posts = site.posts | where: "series", page.series | sort: "series_order" %}
-            {% assign current_index = 0 %}
-            
-            <ol class="series-list">
-                {% for series_post in series_posts %}
-                {% assign series_index = forloop.index %}
-                {% if series_post.url == page.url %}
-                    {% assign current_index = series_index %}
-                {% endif %}
-                
-                <li class="series-item {% if series_post.url == page.url %}current{% endif %}">
-                    {% if series_post.url == page.url %}
-                        <span class="series-current">
-                            <i class="fas fa-arrow-right"></i>
-                            {{ series_post.title }}
-                        </span>
-                    {% else %}
-                        <a href="{{ series_post.url | relative_url }}" class="series-link">
-                            {{ series_post.title }}
-                        </a>
-                    {% endif %}
-                    
-                    {% if series_post.excerpt %}
-                    <p class="series-excerpt">{{ series_post.excerpt | strip_html | truncate: 80 }}</p>
-                    {% endif %}
-                </li>
-                {% endfor %}
-            </ol>
-            
-            <div class="series-progress">
-                <div class="progress-bar">
-                    <div class="progress-fill" style="width: {{ current_index | times: 100 | divided_by: series_posts.size }}%"></div>
-                </div>
-                <span class="progress-text">{{ current_index }} / {{ series_posts.size }}</span>
-            </div>
-        </div>
-        
-        <!-- 系列导航按钮 -->
-        <div class="series-navigation-buttons">
-            {% if current_index > 1 %}
-                {% assign prev_post = series_posts[current_index | minus: 2] %}
-                <a href="{{ prev_post.url | relative_url }}" class="series-nav-btn prev">
-                    <i class="fas fa-chevron-left"></i>
-                    <div class="nav-content">
-                        <span class="nav-label">上一篇</span>
-                        <span class="nav-title">{{ prev_post.title }}</span>
-                    </div>
-                </a>
-            {% endif %}
-            
-            {% if current_index < series_posts.size %}
-                {% assign next_post = series_posts[current_index] %}
-                <a href="{{ next_post.url | relative_url }}" class="series-nav-btn next">
-                    <div class="nav-content">
-                        <span class="nav-label">下一篇</span>
-                        <span class="nav-title">{{ next_post.title }}</span>
-                    </div>
-                    <i class="fas fa-chevron-right"></i>
-                </a>
-            {% endif %}
-        </div>
-    </div>
-    {% endif %}
 
     {% if site.toc and page.toc != false %}
     <div class="table-of-contents">
@@ -254,7 +138,24 @@ layout: default
 {% endif %}
 
 <!-- Comments -->
-{% include comments.html %}
+{% if page.comments and site.disqus_shortname %}
+<section class="comments-section">
+    <div id="disqus_thread"></div>
+    <script>
+        var disqus_config = function () {
+            this.page.url = "{{ site.url }}{{ page.url }}";
+            this.page.identifier = "{{ page.id }}";
+        };
+        (function() {
+            var d = document, s = d.createElement('script');
+            s.src = 'https://{{ site.disqus_shortname }}.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>请启用 JavaScript 来查看 <a href="https://disqus.com/?ref_noscript">Disqus 评论</a>。</noscript>
+</section>
+{% endif %}
 
 <script>
 // Reading time calculation
